--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>tasks</groupId>
   <artifactId>Tasks</artifactId>
   <version>1.0-SNAPSHOT</version>
- 
+
   <name>Tasks</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -84,6 +84,19 @@
       <artifactId>controlsfx</artifactId>
       <version>11.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
